(fix) api and stream test failures